<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/configTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#000000"
        android:shadowRadius="5"
        android:text="Game Configuration"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#BBBB69"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="258dp"
        android:labelFor="@id/nameInput"
        android:layout_height="80dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/configTitle" />

    <RadioGroup
        android:id="@+id/difficultyRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="275dp"
        android:layout_marginBottom="294dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInput">

        <RadioButton
            android:id="@+id/radioEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Easy" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Medium" />

        <RadioButton
            android:id="@+id/radioHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hard" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/characterRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="275dp"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/difficultyRadioGroup"
        app:layout_constraintTop_toBottomOf="@id/nameInput">

        <RadioButton
            android:id="@+id/char1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Char1" />

        <RadioButton
            android:id="@+id/char2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Char2" />

        <RadioButton
            android:id="@+id/char3"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/Char3" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/characterImageRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="275dp"
        android:layout_marginBottom="350dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/difficultyRadioGroup"
        app:layout_constraintTop_toBottomOf="@id/nameInput">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="visible"
            android:contentDescription="@string/char1"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/char2"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/char3"
            tools:srcCompat="@drawable/ic_launcher_background" />
    </RadioGroup>


    <Button
        android:id="@+id/startbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>